# streetview-counterfactual

./: .gitignore  README.md  main.py  paper_ids.txt  pilot_ids.txt  pyproject.toml
configs/: main.yaml
configs/agents/: default.yaml
data/: specs_paper_n100_manifest.csv  specs_paper_n100_summary.json  specs_paper_n50_failed19_ids.txt  specs_paper_n50_failed19_shard1.txt  specs_paper_n50_failed19_shard2.txt  specs_paper_n50_failed19_shard3.txt  specs_paper_n50_ids.txt  specs_paper_n50_manifest.csv  specs_paper_n50_scores.json  specs_paper_n50_summary.json  specs_repro_n20_config.json  specs_repro_n20_ids.txt  specs_repro_n20_manifest.csv  specs_repro_n20_scores.json  specs_repro_n20_summary.json  specs_scores.json
notebooks/: pipeline_walkthrough.ipynb
paper/: main.bib  main.tex  preamble.tex
paper-9-page/: main.tex  preamble.tex
paper-9-page-arxiv/: README-arxiv.md  main.tex
paper-arxiv/: README-arxiv.md  main.tex
pretrain_human_perception_classifier_pp/: README.md  requirements.txt
scripts/: build_evidence_pack.py  build_paper_figures.py  download_vitpp2.sh  export_human_eval_e2.py  generate_counterfactual.py  generate_single_counterfactual.py  ingest_human_eval_e2.py  monitor_counterfactual_pipeline.py  plot_baseline_vs_valid_count.py  plot_delta_cutoff_counts.py  prepare_specs.py  run_analysis.py  run_pipeline.py  run_repro_pipeline.py  summarize_paper_results.py  test_pipeline.py
src/: Untitled  config.py  lever_identity.py  scoring.py
tests/: test_human_eval_e2.py  test_planner_enforcement.py  test_replicate_client.py  test_scoring_outputs.py
(+164 files in other folders)
