[project]
name = "counter-factual-streetview"
version = "0.1.0"
description = "Counterfactual image edits for probing street-view perception models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2",
    "openai>=1.43",
    "pillow>=10.4",
    "python-dotenv>=1.0",
    "replicate>=0.34",
    "rich>=13.9",
    "tqdm>=4.66",
    "typing_extensions>=4.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.ruff.lint.per-file-ignores]
"notebooks/pipeline_walkthrough.ipynb" = ["ALL"]
